--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,12 @@ baseURL = "https://rosetta.cash/"
 languageCode = "en-us"
 title = "RosettaCash"
 theme = "ananke"
+
+[params]
+  favicon = ""
+  description = "Bitcoin Cash in A Thousand Ways, A Thousand Ways of Bitcoin Cash."
+  github = "https://github.com/rosettacash"
+  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class = "bg-black"
+  featured_image = "/images/pexels-photo-931881.jpeg"
+  recent_posts_number = 4
